# comfyui-pixel3dmm

./: .gitignore  CHANGELOG.md  INSTALL.md  LICENSE  README.md  __init__.py  face_reconstructor.py  flame_optimizer.py  mesh_exporter.py  normal_predictor.py  pixel3dmm_loader.py  pyproject.toml  requirements.txt  utils.py  uv_predictor.py
examples/: README.md  advanced_optimization.json  basic_reconstruction.json
